# bluetext-templates

./: .gitignore  CLAUDE.md  README.md  design-spec-template.md
apps/flutter/: template.yaml
apps/flutter/code/lib/: main.dart
apps/flutter/config/: k8s.flutter.yaml
apps/flutter/config/flutter/: metadata.yaml
apps/flutter/development/: patches.yaml
apps/web-app/: template.yaml
apps/web-app/code/: vite.config.ts
apps/web-app/config/: k8s.web-app.yaml
apps/web-app/development/: patches.yaml
blueprints/: PRINCIPLES.md  index.yaml  tags.yaml
blueprints/auth/add-oidc/: blueprint.yaml
blueprints/auth/api-rbac/: blueprint.yaml
blueprints/auth/app-oidc/: blueprint.yaml
blueprints/auth/curity/: blueprint.yaml
blueprints/auth/curity-assign-roles/: blueprint.yaml
blueprints/auth/curity-configured/: blueprint.yaml
blueprints/auth/curity-couchbase/: blueprint.yaml
blueprints/auth/curity-couchbase-jdbc/: blueprint.yaml
blueprints/auth/curity-create-users/: blueprint.yaml
blueprints/auth/curity-hsqldb/: blueprint.yaml
blueprints/auth/curity-oauth/: blueprint.yaml
blueprints/auth/curity-phantom-token/: blueprint.yaml
blueprints/auth/curity-rbac/: blueprint.yaml
blueprints/auth/curity-test-users/: blueprint.yaml
blueprints/auth/kong-phantom-token/: blueprint.yaml
blueprints/auth/service-jwt/: blueprint.yaml
blueprints/auth/web-app-oidc/: blueprint.yaml
blueprints/database/couchbase-wire/: blueprint.yaml
blueprints/database/scm-couchbase/: blueprint.yaml
blueprints/database/scm-sync-gateway/: blueprint.yaml
blueprints/database/service-config-manager-register/: blueprint.yaml
blueprints/demo/ai-governance/: blueprint.yaml
blueprints/dev/kong-reload/: blueprint.yaml
blueprints/fullstack/items-demo/: blueprint.yaml
blueprints/fullstack/items-demo/files/model/: Cargo.toml
blueprints/fullstack/items-demo/files/model/src/: items.rs  lib.rs
blueprints/gateway/kong/: blueprint.yaml
blueprints/gateway/kong-mcp-proxy/: README.md  blueprint.yaml
blueprints/gateway/kong-proxy/: blueprint.yaml
blueprints/gateway/kong-request-logger/: blueprint.yaml
clients/api/: template.yaml
clients/couchbase/: Cargo.toml  lib.rs  template.yaml
clients/jwt-auth/: Cargo.toml  template.yaml
clients/tigerbeetle/: Cargo.toml  lib.rs  template.yaml
contexts/: auth-curity-basic.yaml  auth-curity-couchbase.yaml  auth-curity-rbac-couchbase.yaml  auth-curity-rbac-web-app.yaml  auth-curity-rbac.yaml  gateway-kong-plugin.yaml
services/api/: template.yaml
services/api/base/: deployment.yaml  ingress.yaml
services/api/code/: Cargo.toml  Dockerfile
services/api/config/: k8s.api.yaml
services/api/development/: kustomization.yaml  patches.yaml
services/bluetext-ui/code/: index.html  package.json  server.ts  vite.config.ts
services/bluetext-ui/config/: k8s.bluetext-ui.yaml
services/couchbase/: template.yaml
services/couchbase-edge-server/: template.yaml
services/couchbase-edge-server/base/: ingress.yaml  service.yaml
services/couchbase-edge-server/config/: k8s.couchbase-edge-server.yaml
services/couchbase-edge-server/development/: patches.yaml
services/couchbase-sync-gateway/: template.yaml
services/couchbase-sync-gateway/base/: deployment.yaml
services/couchbase-sync-gateway/code/: sync_gateway.json
services/couchbase-sync-gateway/config/: k8s.couchbase-sync-gateway.yaml
services/couchbase-sync-gateway/development/: patches.yaml
services/couchbase/base/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
services/couchbase/code/api-config/couchbase/base/: Cargo.toml
services/couchbase/code/api-config/couchbase/base/src/: handlers.rs  main.rs
services/couchbase/config/: k8s.couchbase.yaml
services/couchbase/development/: kustomization.yaml  patches.yaml
services/couchbase/managed-state/couchbase/: Cargo.toml  service.yaml
services/couchbase/managed-state/couchbase/src/: lib.rs
services/curity/: README.md  template.yaml
services/curity/base/: deployment.yaml  kustomization.yaml  service.yaml
services/curity/code/api-config/curity/base/: Cargo.toml
services/curity/code/api-config/curity/base/src/: handlers.rs  main.rs
services/curity/config/: k8s.curity.yaml
services/curity/development/: ingress-route.yaml  kustomization.yaml  patches.yaml
services/curity/managed-state/curity/: Cargo.toml  service.yaml
services/curity/managed-state/curity/src/: lib.rs
services/flutter/: template.yaml
services/flutter-app/config/: k8s.flutter-app.yaml
services/flutter-dev-container/code/: .gitignore  polytope.yml  pubspec.yaml
services/flutter-dev-container/config/: k8s.flutter-dev-container.yaml
services/flutter/base/: deployment.yaml  ingress.yaml
services/flutter/code/: Dockerfile  analysis_options.yaml  pubspec.yaml
services/flutter/development/: kustomization.yaml  patches.yaml
services/kong/: template.yaml
services/kong-enterprise/: template.yaml
services/kong/base/: deployment.yaml  ingress.yaml
services/kong/config/: k8s.kong.yaml
services/kong/development/: kustomization.yaml  patches.yaml
services/resonate/: template.yaml
services/resonate/base/: deployment.yaml  ingress.yaml  service.yaml
services/resonate/code/: Dockerfile
services/resonate/config/: k8s.resonate.yaml
services/resonate/development/: kustomization.yaml  patches.yaml
services/service-config-manager/: template.yaml
services/service-config-manager/base/: deployment.yaml
services/service-config-manager/code/: Dockerfile  requirements.txt
services/service-config-manager/config/: k8s.service-config-manager.yaml
services/service-config-manager/development/: patches.yaml
services/tigerbeetle/: template.yaml
services/tigerbeetle/base/: deployment.yaml
services/web-app/: template.yaml
services/web-app/base/: deployment.yaml  ingress.yaml  service.yaml
services/web-app/code/: Dockerfile  index.html  package.json  server.ts  vite.config.js  vite.config.ts
services/web-app/config/: k8s.web-app.yaml
services/web-app/development/: kustomization.yaml  patches.yaml
(+306 files in other folders)
