[package]
name = "couchbase-managed-state"
version = "0.1.0"
edition = "2024"
description = "Worked-example managed-state crate for Couchbase. Creates buckets/scopes/collections via the admin REST API."

[lib]
name = "couchbase_managed_state"
path = "src/lib.rs"

[dependencies]
# The platform's managed-state runtime (MigrationCtx, LinkData,
# #[migration]). Path-dep on the system's local copy under
# code/bluetext-managed-state — `b create` ships this alongside the
# system scaffold so a fresh checkout builds end-to-end.
bluetext-managed-state = { path = "../../../code/bluetext-managed-state" }

# HTTP client for the Couchbase admin API.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
