[package]
name = "models"
version = "0.1.0"
edition = "2024"

[lib]
name = "models"
path = "src/lib.rs"

[[bin]]
name = "models"
path = "src/main.rs"

[features]
# Forwarded feature flags recognized by the state_machine macro.
# `__all` enables every store backend (Couchbase, Redpanda) — same default
# as a freshly scaffolded system from `b create`.
resonate = ["bluetext-model/resonate"]
couchbase = ["bluetext-model/couchbase"]
redpanda = ["bluetext-model/redpanda"]

[dependencies]
bluetext-model = { path = "../code/bluetext-model", features = ["__all"] }
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
