[package]
name = "models"
version = "0.1.0"
edition = "2024"

[lib]
name = "models"
path = "src/lib.rs"

[[bin]]
name = "models"
path = "src/main.rs"

[features]
# Forwarded feature flags recognized by the state_machine macro.
# The items-demo blueprint scaffolds a CouchbaseCollection<Item> state
# var — Redpanda and Tigerbeetle stay opt-in. Enable either via
# `b store add redpanda` / `b store add tigerbeetle`, which provisions
# the service + client and flips the feature here.
resonate = ["bluetext-model/resonate"]
couchbase = ["bluetext-model/couchbase"]
redpanda = ["bluetext-model/redpanda"]
tigerbeetle = ["bluetext-model/tigerbeetle"]

[dependencies]
bluetext-model = { path = "../code/bluetext-model", features = ["couchbase"] }
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
